fix for ugly gap between left column rock and banner
git-svn-id: file:///project/repositories/svn2/iospe/branches/kiln@1702 f80ad51f-db79-4307-b24f-aec1c37bd7ba

--- a/webapps/ROOT/assets/styles/site.css
+++ b/webapps/ROOT/assets/styles/site.css
@@ -208,6 +208,14 @@ a#griffin:active {
     }
 }
 
+#body-wrapper {
+    margin-top: -14px;
+}
+
+#main-content {
+    padding-top: 14px;
+}
+
 /* tei body */
 
 .tei.body ul, .tei.body ol {list-style-type: none}
